images rendering correctly on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -547,10 +547,13 @@ a:focus {
   cursor: pointer;
   background-size: contain;
   background-position: center center;
+  background-repeat: no-repeat;
   // background-color: $color-text-black;
   border-radius: 6px;
   margin-block-end: 5px;
   // height: 300px;
+  // width: 100%;
+  // height: 94%;
   aspect-ratio: 3/5;
   position: relative;
 }
@@ -568,9 +571,10 @@ a:focus {
   @include image-container-default;
   background-size: contain;
   background-repeat: no-repeat;
-  // height: 200px;
+  height: 200px;
   aspect-ratio: 5/3;
   background-color: $color-text-white;
+  // border: 2px solid #000;
 }
 
 @media (min-width: $small-desktop) {
@@ -584,8 +588,9 @@ a:focus {
   .image-container.showcase-image-fetch,
   .image-container.showcase-image-cool-car {
     grid-column: 1 / 7;
-    // height: 300px;
+    height: 266px;
     background-size: cover;
+    background-repeat: no-repeat;
     margin-block-end: 20px;
   }
 }
@@ -594,14 +599,16 @@ a:focus {
 .image-container.secondary-image {
   @include image-container-default;
   grid-column: 1 / 3;
-  // height: 300px;
+  height: 200px;
   aspect-ratio: 5/3;
+  // border: 2px solid red;
 }
 
 @media (min-width: $small-desktop) {
   .image-container.secondary-image {
     grid-column: 1 / 13;
-    // height: 350px;
+    background-repeat: no-repeat;
+    height: 266px;
     aspect-ratio: 5/3;
   }
 }
@@ -610,13 +617,16 @@ a:focus {
 .image-container.tertiary-image {
   @include image-container-default;
   grid-column: 1 / 3;
-  // height: 225px;
+  height: 200px;
   aspect-ratio: 5/3;
+  background-size: cover;
+  // border: 2px solid green;
 }
 
 @media (min-width: $small-desktop) {
   .image-container.tertiary-image {
     grid-column: 1 / 4;
+    height: 180px;
   }
 }
 
